--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
         </div> <!-- .container -->
 
+        <p><a href="https://github.com/bthaib/">GitHub Repository</a></p>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
         <script src="js/employees.js"></script>
